# cyton_gamma_300_ROS

./: README
ROS_ws/src/: bashrc  standup.sh
ROS_ws/src/cyton_controllers/: cyton_controller.yaml  mainpage.dox  manifest.xml
ROS_ws/src/cyton_controllers/launch/: controller_manager.launch  main_launcher.launch  start_controller.launch
ROS_ws/src/cyton_controllers/scripts/: dynamixel_joint_state_publisher.py
ROS_ws/src/cyton_gamma_1500_description/: CMakeLists.txt  README  cyton_gamma_1500.rviz  cyton_gamma_1500.urdf  cyton_gamma_1500.urdf.xacro  cyton_gamma_1500_macros.urdf.xacro  package.xml
ROS_ws/src/cyton_gamma_1500_description/launch/: cyton_gamma_1500.launch  generate_urdf.launch  turtlebot_arm_moveit.launch
ROS_ws/src/cyton_gamma_1500_setupassistant_andras2/: .setup_assistant  CMakeLists.txt  package.xml
ROS_ws/src/cyton_gamma_1500_setupassistant_andras2/config/: controllers.yaml  cyton_gamma_1500.srdf  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml
ROS_ws/src/cyton_gamma_1500_setupassistant_andras2/launch/: cyton_gamma_1500_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
(+5 files in other folders)
